# dipp

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  BUILDING.md  CMakeLists.txt  CONTAINER.MD  Dockerfile  LICENSE.md  README.md  configure.default.sh
src/core/: CMakeLists.txt
src/core/loading/: sdss_image_loader.cpp  sdss_image_loader.hpp  sdss_validation_loader.cpp  sdss_validation_loader.hpp
src/core/model/: cluster.hpp  context.hpp  distribution.hpp  k_means_init.hpp  k_means_model.hpp  pixel.hpp  pixel_distance.hpp  rect.hpp  sdss_context.hpp
src/core/processing/: downsampling.cpp  downsampling.hpp  estimate_clusters.cpp  estimate_clusters.hpp  image_to_dia.cpp  image_to_dia.hpp  k_means.cpp  k_means.hpp  pipeline.hpp  pixel_cluster_mapping.cpp  pixel_cluster_mapping.hpp  pixel_worker_mapping.cpp  pixel_worker_mapping.hpp  threshold.cpp  threshold.hpp  validation.cpp  validation.hpp  write_clusters_to_disk.cpp  write_clusters_to_disk.hpp  write_image_to_disk.cpp  write_image_to_disk.hpp
src/core/processing/k_means/: bisecting.cpp  bisecting.hpp  k_means.cpp  k_means.hpp  k_means_init.hpp  k_means_plus_plus.cpp  k_means_plus_plus.hpp  k_means_random.cpp  k_means_random.hpp  k_means_strategy.hpp  lloyd.cpp  lloyd.hpp
src/core/processing/k_means/init/: init_strategy.hpp  k_means_plus_plus.cpp  k_means_plus_plus.hpp  random.cpp  random.hpp  random_partition.cpp  random_partition.hpp
src/core/util/: color_utils.cpp  color_utils.hpp  command_line_parser.cpp  command_line_parser.hpp  csv_reader.hpp  cvs_reader.cpp  file_utils.cpp  file_utils.hpp  math_utils.hpp  network_utils.cpp  network_utils.hpp  paint_bounding_boxes.cpp  paint_bounding_boxes.hpp  paint_clusters.cpp  paint_clusters.hpp  query_builder.hpp  string_utils.cpp  string_utils.hpp
test/: CMakeLists.txt  common.hpp
test/loading/: sdss_image_loader_test.cpp
test/model/: context_test.cpp  rect_test.cpp
test/processing/: downsampling_test.cpp  estimate_clusters_test.cpp  image_to_dia_test.cpp  k_means_test.cpp  pixel_cluster_mapping_test.cpp  pixel_worker_mapping_test.cpp  threshold_test.cpp  validation_test.cpp  write_cluster_to_disk_test.cpp  write_image_to_disk_test.cpp
test/processing/k_means/: bisecting_test.cpp  k_means_plus_plus_test.cpp  k_means_test.cpp  lloyd_test.cpp
test/processing/k_means/init/: k_means_plus_plus_test.cpp
test/util/: color_utils_test.cpp  csv_reader_test.cpp  math_utils_test.cpp  query_builder_test.cpp  string_utils_test.cpp
(+11 files in other folders)
